tests/sumo/errors/missing_first_param/errors.sumo.agg
Error: The parameter '0' is not allowed in this context.
 Switch or parameter name expected.
Error: Could not parse commandline options.
Quitting (on error).
